# a0

./: .dockerignore  .gitattributes  .gitignore  .replit  CLAUDE.md  CNAME  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  _config.yml  _logging_legacy.py  a0p.html  cloudbuild.yaml  concepts.html  contract.py  drizzle.config.ts  github_repo_contents.json  index.html  interdependent_way.md  main.py  model_adapter.py  notes.html  package-lock.json  package.json  pictures.html  planning.md  playwright.config.ts  projects.html  ptca.html  push-to-github.sh  pyproject.toml  replit.md  replit.nix  router.py  run.sh  skills-lock.json  spec.md  state.py  (+6 more)
a0/: a0.py  bandit.py  contract.py  heartbeat.py  jury.py  logging.py  memory.py  meta13.py  model_adapter.py  provenance.py  router.py  state.py  tiers.py
a0python/: .env.example  .gitignore  pyproject.toml  run.sh
a0python/a0/: __init__.py  a0.py  agent.py  bandit.py  encryption.py  heartbeat.py  invariants.py  jury.py  lifecycle.py  memory.py  meta13.py  model_registry.py  provenance.py  state.py
a0python/a0/cores/: __init__.py  _base.py  phonon.py
a0python/a0/cores/omega/: __init__.py
a0python/a0/cores/omega/tensors/: __init__.py
a0python/a0/cores/omega/tensors/interdependent_way/: __init__.py  architecture.py  hmmm.py  laws.py
a0python/a0/cores/omega/tensors/supporting/: __init__.py  glossary.py  specs.py
a0python/a0/cores/pcna/: __init__.py  inference.py  omega.py  phi.py  psi.py  zfae.py
a0python/a0/cores/pcta/: __init__.py  circle_tensors.py
a0python/a0/cores/phi/: __init__.py
a0python/a0/cores/psi/: __init__.py
a0python/a0/cores/psi/tensors/: __init__.py  context_builder.py  contract.py  env.py  logging.py  router.py
a0python/a0/cores/psi/tensors/adapters/: __init__.py  anthropic_adapter.py  claude_agent_adapter.py  emergent_adapter.py  local_model_adapter.py  subagents.py
a0python/a0/cores/psi/tensors/tools/: edcm_tool.py  pdf_tool.py  whisper_tool.py
a0python/a0/cores/ptca/: __init__.py  seed_router.py
a0python/a0/guardian/: __init__.py  approval_gate.py  audit.py  recovery.py  sentinels.py  user_db.py
a0python/a0/guardian/ui/: __init__.py  app.py  circles.py  seeds.py
a0python/a0/guardian/ui/seed_advisory/: __init__.py
a0python/a0/guardian/ui/seed_core/: __init__.py
a0python/a0/guardian/ui/seed_guardian/: __init__.py
a0python/a0/guardian/ui/seed_jury/: __init__.py
a0python/a0/guardian/ui/seed_memory/: __init__.py
a0python/a0/guardian/ui/seed_meta/: __init__.py
a0python/a0/guardian/ui/seed_transport/: __init__.py
a0python/a0/guardian/ui/web/: __init__.py  app.py
a0python/a0/state/: .gitignore
a0python/edcm-org/: pyproject.toml
a0python/edcm-org/examples/: sample_meeting.txt  sample_tickets.csv
a0python/edcm-org/spec/: metric-glossary.md
a0python/edcm-org/src/edcm_org/: __init__.py  cli.py  spec_version.py  types.py
a0python/edcm-org/src/edcm_org/basins/: __init__.py  detect.py  taxonomy.py
a0python/edcm-org/src/edcm_org/eval/: protocol.py
a0python/edcm-org/src/edcm_org/governance/: gaming.py  interventions.py  privacy.py
a0python/edcm-org/src/edcm_org/io/: schemas.py
a0python/edcm-org/src/edcm_org/metrics/: primary.py  progress.py
a0python/edcm-org/src/edcm_org/params/: alpha.py  complexity.py  delta_max.py
a0python/edcm-org/tests/: test_basin_detection.py  test_no_individual_outputs.py  test_privacy_guard.py
a0python/tests/: test_smoke.py
attached_assets/: branding-1775550867838.json  content-1775143889868.md  edcm.behavior.v1.2_1775763298918.yaml  edcm.hd.v1_1775763298942.yaml  edcm_core_1775763298869.py  edcm_metrics_1775763298830.py  edcm_ui_1775763298891.py  github-recovery-codes_1773764163080.txt
client/: index.html
docs/: 2026-04-25-gpt-5.5-audit.md  architecture.md  help-wanted.md  ops-log.md  roadmap.md  troubleshooting.md
logs/: a0p-master.jsonl  edcm-metrics.jsonl  (+9 more)
(+14535 files in other folders)
