[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["python"]

[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "google-genai>=1.73.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "numpy>=2.4.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "stripe>=15.0.1",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
